--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -10,7 +10,17 @@ add_executable(multi_win
     glfw_hello/multi_win.cpp
 )
 
-# 链接GLFW和OpenGL库
+# 测试输入事件
+add_executable(test_input
+    glfw_hello/test_input.cpp
+)
+
+# 窗口管理库demo
+add_executable(repo_test
+    repo_test/main.cpp
+)
+
+# 链接GLFW、OpenGL库和sgui库
 find_package(OpenGL REQUIRED)
 target_link_libraries(glfw_hello
     PRIVATE
@@ -24,13 +34,33 @@ target_link_libraries(multi_win
     ${OPENGL_LIBRARIES}
 )
 
-# 包含目录
+target_link_libraries(repo_test
+    PRIVATE
+    glfw
+    ${OPENGL_LIBRARIES}
+    sgui_static  # 使用静态库
+)
+
+target_link_libraries(test_input
+    PRIVATE
+    glfw
+    ${OPENGL_LIBRARIES}
+    sgui_static  # 使用静态库
+)
+
+# 包含目录 - 只需要include目录，因为库已经处理了内部依赖
 target_include_directories(glfw_hello PRIVATE
     ${PROJECT_SOURCE_DIR}/include
-    ${PROJECT_SOURCE_DIR}/src
 )
 
 target_include_directories(multi_win PRIVATE
     ${PROJECT_SOURCE_DIR}/include
-    ${PROJECT_SOURCE_DIR}/src
+)
+
+target_include_directories(repo_test PRIVATE
+    ${PROJECT_SOURCE_DIR}/include
+)
+
+target_include_directories(test_input PRIVATE
+    ${PROJECT_SOURCE_DIR}/include
 )
