--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,19 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 
+# 添加yoga作为外部依赖
+option(BUILD_YOGA "Build yoga library from source" ON)
+if(BUILD_YOGA)
+    # 构建yoga库
+    add_subdirectory(ref/yoga yoga_build)
+    
+    # 创建yoga的别名，方便其他target使用
+    add_library(yoga::yoga ALIAS yogacore)
+else()
+    # 查找已安装的yoga库
+    find_package(yoga REQUIRED)
+endif()
+
 # 包含src子目录来构建sgui库
 add_subdirectory(src)
 
