--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -24,6 +24,9 @@ add_subdirectory(cairo_demo)
 # Margin & Padding test
 add_subdirectory(margin_padding_test)
 
+# Button demo
+add_subdirectory(button_demo)
+
 # 链接GLFW、OpenGL库和sgui库
 find_package(OpenGL REQUIRED)
 target_link_libraries(glfw_hello
